@@ -122,6 +122,10 @@ warn_when_chosen_building_would_replace_another = false
 ; reduces micromanage but comes at the cost of the specialist yields.
 do_not_unassign_workers_from_polluted_tiles = false
 
+; Normally the game draws capital cities one level larger than normal. I.e., a capital city at size 1 - 6 uses the graphic for cities at size 7 - 12,
+; and a capital at size 7+ uses the graphic for cities 13+. This option turns that off, so capitals use the standard city graphics.
+do_not_make_capital_cities_appear_larger = false
+
 [====================]
 [=== OPTIMIZATION ===]
 [====================]
